<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_formule"
            android:icon="@drawable/ic_menu_formule"
            android:title="@string/formule" />
        <item
            android:id="@+id/nav_esempi"
            android:icon="@drawable/ic_menu_example"
            android:title="@string/esempi" />
        <item
            android:id="@+id/nav_calculate"
            android:icon="@drawable/ic_menu_calculate"
            android:title="@string/calculate" />
        <item android:title="@string/formule_section">
            <menu>
                <item
                    android:id="@+id/formule_coord"
                    android:icon="@drawable/ic_menu_coord"
                    android:title="@string/coord" />
                <item
                    android:id="@+id/formule_data"
                    android:icon="@drawable/ic_menu_data"
                    android:title="@string/data" />
                <item
                    android:id="@+id/formule_distance"
                    android:icon="@drawable/ic_menu_distance"
                    android:title="@string/distance" />
                <item
                    android:id="@+id/formule_speed"
                    android:icon="@drawable/ic_menu_speed"
                    android:title="@string/speed" />
                <item
                    android:id="@+id/formule_time"
                    android:icon="@drawable/ic_menu_time"
                    android:title="@string/time" />
                <item
                    android:id="@+id/formule_windtr"
                    android:icon="@drawable/ic_menu_windtr"
                    android:title="@string/windtr" />
            </menu>
        </item>

    </group>

    <item android:title="Altro">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_home"
                android:title="@string/home" />
        </menu>
    </item>
</menu>
