<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ivancristina.navigazione.FormuleActivity">

    <ScrollView
        android:id="@+id/formule_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">
        <LinearLayout
            android:id="@+id/layout_formule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical" >

            <!-- Dati -->
            <LinearLayout
                android:id="@+id/windtr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/windtr"
                android:textSize="28sp"
                android:textStyle="bold|italic"
                android:textColor="#000000" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/ext_alpha"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/expl_alpha"
                            android:textSize="14sp"
                            android:textColor="#000000"
                            android:maxLines="100" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/ext_wv"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/expl_wv"
                            android:textSize="14sp"
                            android:textColor="#000000"
                            android:maxLines="100" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/ext_wd"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/expl_wd"
                            android:textSize="14sp"
                            android:textColor="#000000"
                            android:maxLines="100" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/ext_lc"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/expl_lc"
                            android:textSize="14sp"
                            android:textColor="#000000"
                            android:maxLines="100" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/ext_xc"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/expl_xc"
                            android:textSize="14sp"
                            android:textColor="#000000"
                            android:maxLines="100" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/ext_wca"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/expl_wca"
                            android:textSize="14sp"
                            android:textColor="#000000"
                            android:maxLines="100" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/ext_gsa"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/expl_gsa"
                            android:textSize="14sp"
                            android:textColor="#000000"
                            android:maxLines="100" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/ext_gsr"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/expl_gsr"
                            android:textSize="14sp"
                            android:textColor="#000000"
                            android:maxLines="100" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/ext_fta"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/expl_fta"
                            android:textSize="14sp"
                            android:textColor="#000000"
                            android:maxLines="100" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/ext_ftr"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/expl_ftr"
                            android:textSize="14sp"
                            android:textColor="#000000"
                            android:maxLines="100" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
