<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ivancristina.navigazione.FormuleActivity">

    <ScrollView
        android:id="@+id/formule_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">
        <LinearLayout
            android:id="@+id/layout_formule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical" >

            <!-- Dati -->
            <LinearLayout
                android:id="@+id/data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/data"
                android:textSize="28sp"
                android:textStyle="bold|italic"
                android:textColor="#000000" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/qnh"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/expl_qnh"
                            android:textSize="14sp"
                            android:textColor="#000000"
                            android:maxLines="100" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/ext_isa"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/expl_isa"
                            android:textSize="14sp"
                            android:textColor="#000000"
                            android:maxLines="100" />
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:padding="4dp"
                                    android:text="@string/form_isa"
                                    android:textSize="14sp"
                                    android:textStyle="italic"
                                    android:textColor="#000000"
                                    android:maxLines="100" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/ext_sat"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/expl_sat"
                            android:textSize="14sp"
                            android:textColor="#000000"
                            android:maxLines="100" />
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:padding="4dp"
                                    android:text="@string/formula"
                                    android:textSize="14sp"
                                    android:textStyle="italic"
                                    android:textColor="#000000" />
                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/lol" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/ext_sigma"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/expl_sigma"
                            android:textSize="14sp"
                            android:textColor="#000000"
                            android:maxLines="100" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/ext_tasrel"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/expl_tasrel"
                            android:textSize="14sp"
                            android:textColor="#000000"
                            android:maxLines="100" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/isasat"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/expl_isasat"
                            android:textSize="14sp"
                            android:textColor="#000000"
                            android:maxLines="100" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/ext_ff"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/expl_ff"
                            android:textSize="14sp"
                            android:textColor="#000000"
                            android:maxLines="100" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/ext_fr"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/expl_fr"
                            android:textSize="14sp"
                            android:textColor="#000000"
                            android:maxLines="100" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/ext_fob"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/expl_fob"
                            android:textSize="14sp"
                            android:textColor="#000000"
                            android:maxLines="100" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/ext_t"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/expl_t"
                            android:textSize="14sp"
                            android:textColor="#000000"
                            android:maxLines="100" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
